frontend/app/components/breadcrumbs/index.css
/*! purgecss start ignore */

.breadcrumbs {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.breadcrumbs li {
  display: inline-flex;
  align-items: center;
  margin-right: 6px;
  position: relative;
  max-width: 100%;
  min-width: 0;
}

.breadcrumbs li:nth-child(2) {
  flex: 1;
}

.breadcrumbs li:not(:first-child):before {
  content: '/';
  margin-right: 6px;
  flex-shrink: 0;
}

.breadcrumbs li a {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: block;
}

/*! purgecss end ignore */

